signature + fichier PDF